--- a/translations/zh.json
+++ b/translations/zh.json
@@ -2,25 +2,25 @@
     "nav": {
         "company": "公司",
         "about": "关于我们",
-        "about.profile": "公司简介",
-        "about.vision": "愿景与使命",
-        "about.team": "我们的团队",
-        "about.history": "公司历史",
+        "profile": "公司简介",
+        "vision": "愿景与使命",
+        "team": "我们的团队",
+        "history": "公司历史",
         "fields": "领域",
-        "fields.mining": "矿业",
-        "fields.chemical": "化工业",
-        "fields.energy": "能源产业",
-        "fields.agriculture": "农业",
+        "mining": "矿业",
+        "chemical": "化工业",
+        "energy": "能源产业",
+        "agriculture": "农业",
         "invest": "投资",
-        "invest.planning": "投资规划",
-        "invest.global": "全球投资",
-        "invest.strategy": "投资策略",
-        "invest.analysis": "市场分析",
+        "planning": "投资规划",
+        "global": "全球投资",
+        "strategy": "投资策略",
+        "analysis": "市场分析",
         "contact": "联系我们",
-        "contact.address": "雅加达办事处：Jl. Example No.123",
-        "contact.whatsapp": "+62 812-3456-7890",
-        "contact.email": "info@example.com",
-        "contact.phone": "+62 812-3456-7890"
+        "address": "雅加达办事处：Jl. Example No.123",
+        "whatsapp": "+62 812-3456-7890",
+        "email": "info@example.com",
+        "phone": "+62 812-3456-7890"
     },
     "home": {
         "title": "全球解决方案",
