Revert "fix translation eror"
This reverts commit a28c901e072653235a8db917e625db347c6fc2ea.

--- a/translations/en.json
+++ b/translations/en.json
@@ -2,25 +2,25 @@
     "nav": {
         "company": "Company",
         "about": "About Us",
-        "profile": "Company Profile",
-        "vision": "Vision & Mission",
-        "team": "Our Team",
-        "history": "Company History",
+        "about.profile": "Company Profile",
+        "about.vision": "Vision & Mission",
+        "about.team": "Our Team",
+        "about.history": "Company History",
         "fields": "Fields",
-        "mining": "Mining Industry",
-        "chemical": "Chemical Industry",
-        "energy": "Energy Industry",
-        "agriculture": "Agriculture Industry",
+        "fields.mining": "Mining Industry",
+        "fields.chemical": "Chemical Industry",
+        "fields.energy": "Energy Industry",
+        "fields.agriculture": "Agriculture Industry",
         "invest": "Investment",
-        "planning": "Investment Planning",
-        "global": "Global Investment",
-        "strategy": "Investment Strategy",
-        "analysis": "Market Analysis",
+        "invest.planning": "Investment Planning",
+        "invest.global": "Global Investment",
+        "invest.strategy": "Investment Strategy",
+        "invest.analysis": "Market Analysis",
         "contact": "Contact Us",
-        "address": "Jakarta Office: Jl. Example No.123",
-        "whatsapp": "+62 812-3456-7890",
-        "email": "info@example.com",
-        "phone": "+62 812-3456-7890"
+        "contact.address": "Jakarta Office: Jl. Example No.123",
+        "contact.whatsapp": "+62 812-3456-7890",
+        "contact.email": "info@example.com",
+        "contact.phone": "+62 812-3456-7890"
     },
     "home": {
         "title": "Global Solutions",
