--- a/translations/id.json
+++ b/translations/id.json
@@ -2,20 +2,20 @@
     "nav": {
         "company": "Perusahaan",
         "about": "Tentang Kami",
-        "profile": "Profil Perusahaan",
-        "vision": "Visi & Misi",
-        "team": "Tim Kami",
-        "history": "Sejarah Perusahaan",
+        "about.profile": "Profil Perusahaan",
+        "about.vision": "Visi & Misi",
+        "about.team": "Tim Kami",
+        "about.history": "Sejarah Perusahaan",
         "fields": "Bidang",
-        "mining": "Industri Pertambangan",
-        "chemical": "Industri Kimia",
-        "energy": "Industri Energi",
-        "agriculture": "Industri Pertanian",
+        "fields.mining": "Industri Pertambangan",
+        "fields.chemical": "Industri Kimia",
+        "fields.energy": "Industri Energi",
+        "fields.agriculture": "Industri Pertanian",
         "invest": "Investasi",
-        "planning": "Perencanaan Investasi",
-        "global": "Investasi Global",
-        "strategy": "Strategi Investasi",
-        "analysis": "Analisis Pasar",
+        "invest.planning": "Perencanaan Investasi",
+        "invest.global": "Investasi Global",
+        "invest.strategy": "Strategi Investasi",
+        "invest.analysis": "Analisis Pasar",
         "contact": "Hubungi Kami"
     },
     "home": {
